# tensor-hub

./: .gitignore  LICENSE  README.md  settings.gradle.kts
.github/workflows/: build.yml
.hermes/plans/: 2026-06-30_000000-tensor-hub-mvp.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fft.h  tflite_minimal.h  whisper_decoder.cpp  whisper_decoder.h  whisper_jni.cpp  whisper_mel.cpp  whisper_mel.h
app/src/main/java/com/taoleeeee/tensorhub/: BootReceiver.kt  MainActivity.kt  TensorHubApp.kt
app/src/main/java/com/taoleeeee/tensorhub/delegate/: DelegateManager.kt
app/src/main/java/com/taoleeeee/tensorhub/inference/: EmbeddingInference.kt  InferenceEngine.kt  MelSpectrogram.kt  WhisperNative.kt  WhisperTranscription.kt
app/src/main/java/com/taoleeeee/tensorhub/model/: ModelConfig.kt  ModelManager.kt
app/src/main/java/com/taoleeeee/tensorhub/server/: InferenceService.kt  TensorHubHttpServer.kt
app/src/main/java/com/taoleeeee/tensorhub/server/routes/: AudioRoutes.kt  EmbeddingRoutes.kt  HealthRoutes.kt  ModelRoutes.kt
app/src/main/java/com/taoleeeee/tensorhub/ui/screens/: HomeScreen.kt  ModelScreen.kt  SettingsScreen.kt
app/src/main/java/com/taoleeeee/tensorhub/ui/theme/: Theme.kt
app/src/main/java/com/taoleeeee/tensorhub/util/: Logger.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: api-reference.md  architecture.md  model-compatibility.md
gradle/: libs.versions.toml
